test/tests/stages/8_loops/valid/extra_credit/switch_default_fallthrough.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(5)
  ;
  switch
  (
  const int(0)
  )
  {
  default
  :
  identifier(a)
  =
  const int(0)
  ;
  case
  const int(1)
  :
  return
  identifier(a)
  ;
  }
  return
  identifier(a)
  +
  const int(1)
  ;
  }
