test/tests/stages/8_loops/invalid_semantics/extra_credit/undeclared_variable_in_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  return
  identifier(b)
  ;
  break
  ;
  default
  :
  break
  ;
  }
  return
  const int(0)
  ;
  }
